--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
-        <h1 class="site-title">Vanessa Me Tonini</h1>
-        <h2 class="site-subtitle">web developer</h2>
+        <h1 class="site-title">Marcelo Cecilio</h1>
+        <h2 class="site-subtitle">Estudante de Ciência da Computação</h2>
       </header>
 </body>
 </html>
