--- a/index.html
+++ b/index.html
@@ -1,66 +1,88 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Teste</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marcelo CFSF</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Press+Start+2P&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f17770e23f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#portfolio">Portfólio</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
-        <div>
-          <h1 class="site-title">Marcelo Cecilio</h1>
+        <div class="titles">
+          <h1 class="site-title">Marcelo CFSF</h1>
           <h2 class="site-subtitle">Estudante de Ciência da Computação</h2>
         </div>
       </header>
-      <section>
+      <section class="sobre" id="sobre">
+        <h2>Sobre</h2>
+
+        <figure>
+          <img src="img/myPicture.jpg" alt="Marcelo CFSF">
+        </figure>
+
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores aperiam ipsa laboriosam exercitationem voluptas eveniet, accusantium id, obcaecati explicabo minus minima! Culpa eos esse odio quae, sequi ipsam consequatur sed.
+        </p>
+
+        <p>
+          Doloribus provident, aut, quos omnis temporibus facilis expedita, quo accusantium excepturi minima sit? Voluptatem, odio accusamus fugiat tempore ea repellendus. Nam magni ex dolores, fugiat impedit voluptatibus nulla tempore deleniti.
+        </p>
+
+        <p>
+          Quas accusantium quidem possimus consequatur officiis nihil exercitationem laboriosam tenetur, qui eius, harum officia, dolorum odit! Odio beatae, consectetur itaque, eos, sint asperiores aliquid dicta culpa cumque odit rerum rem?
+        </p>
+
+        <p>
+          Este site foi construído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>;)
+        </p>
+      </section>
+      <section class="portifolio" id="portifolio">
         <h2>Portfólio</h2>
-        <figure>
-          <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
-          <figcaption>eCommerce</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
-          <figcaption>Mobile</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-          <figcaption>Web design</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
-          <figcaption>Projetos pessoais</figcaption>
-        </figure>
+        <div class="grid">
+          <div class="flip-card">
+            <div class="card">
+              <figure class="card-front">
+                <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+                <figcaption>eCommerce</figcaption>
+              </figure>
+              <div class="card-back">
+                Oi eu sou a parte de trás :)
+              </div>
+            </div>
+          </div>
+          <figure>
+            <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+            <figcaption>Mobile</figcaption>
+          </figure>
+          <figure>
+            <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+            <figcaption>Web design</figcaption>
+          </figure>
+          <figure>
+            <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+            <figcaption>Projetos pessoais</figcaption>
+          </figure>
+        </div>
+      </section>
+      <section class="contato" id="contato">
+        <h2>Contato</h2>
+        <div class="grid icons">
+          <a target="_blank" href="https://github.com/MarceloCFSF/">
+            <i class="fab fa-github"></i>
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/marcelo-cfsf-1b035a16b">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
       </section>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Teste</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="menu">
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Marcelo Cecilio</h1>
-        <h2 class="site-subtitle">Estudante de Ciência da Computação</h2>
-      </header>
-</body>
-</html>
->>>>>>> 44b7a4a737d4e771d7380f948cad9adddd7680a0
